rimossa lingua settings version

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ android {
             assets.srcDirs = ['res']
         }
 
+        defaultConfig {
+            applicationId "it.tnet.cloudbag.android"
+        }
+
         // Move the tests to tests/java, tests/res, etc...
         instrumentTest.setRoot('tests')
 
